# amfitrack_cpp_SDK

./: .gitignore  .gitmodules  Amfitrack.cpp  Amfitrack.h  Amfitrack.hpp  AmfitrackDeviceTypes.h  Amfitrack_New.cpp  Amfitrack_New.h  CMakeLists.txt  README.md  example.cpp
drv/drv_USB/: HID_Monitor.cpp  HID_Monitor.h
lib/amfiprotapi/: lib_AmfiProt.cpp  lib_AmfiProt.hpp  lib_AmfiProt_API.cpp  lib_AmfiProt_API.hpp  lib_AmfiProt_Amfitrack.cpp  lib_AmfiProt_Amfitrack.hpp
lib/lib_crc/: lib_CRC.c  lib_CRC.cpp  lib_CRC.h  lib_CRC.hpp
lib/lib_fifo/: lib_fifo.hpp
lib/lib_generic_parameter/: lib_Generic_Parameter.c  lib_Generic_Parameter.h
lib/lib_log/: lib_log.cpp  lib_log.h
lib/lib_macro/: lib_MACRO.h
lib/lib_queue/: lib_Queue.c  lib_Queue.h
src/: AmfitrackNode.cpp  AmfitrackNode.h  Amfitrack_Devices.cpp  Amfitrack_Devices.h  Amfitrack_Sensor.cpp  Amfitrack_Sensor.h  Amfitrack_Source.cpp  Amfitrack_Source.h  Amfitrack_callbacks.cpp  Amfitrack_callbacks.h  Amfitrack_config.cpp  Amfitrack_config.h  Amfitrack_task.cpp  Amfitrack_task.h  HID_Monitor.cpp  HID_Monitor.h  project_conf.h  usb_connection.cpp  usb_connection.h
